# traffic-grid

./: .env  .env.example  .gitignore  docker-compose.yml  rotation.py  seed_final.sql
ansible/: ansible.cfg  inventory.yml
backend/: Dockerfile  alembic.ini  pyproject.toml  requirements.txt
backend/.docker/: entrypoint.sh
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_seed_data.py  003_add_users_table.py  004_add_identity_account_type.py
backend/app/: factory.py  main.py  worker.py
backend/app/api/v1/: api.py
backend/app/api/v1/endpoints/: auth.py  identities.py  proxies.py  stats.py  tasks.py  workers.py
backend/app/core/: celery_app.py  config.py  deps.py  security.py  websocket.py
backend/app/db/: seed.py  session.py
backend/app/drivers/: base.py  registry.py  tiktok.py  youtube.py
backend/app/models/: __init__.py  identity.py  task.py  user.py  worker.py
backend/app/schemas/: identity.py  proxy.py  stats.py  task.py  worker.py
backend/app/services/: behavioral_dna.py  browser_worker.py  identity_mesh.py  mobile_controller.py  profile_manager.py  proxy_manager.py  requirements-mobile.txt
backend/app/tasks/: __init__.py  heartbeat.py  orchestrator.py
backend/proto/: worker.proto
database/: schema.sql
docs/: NETWORK.md  device-inventory.md  first-account-registration.md  phase1-roadmap.md  procurement-guide.md  vlan-config-guide.md  z420-adb-setup.md
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  (+7 more)
gateway/: Dockerfile  main.py  pyproject.toml  requirements.txt  rotation.py  server.py
(+70 files in other folders)
