[tool.poetry]
name = "traffic-grid-backend"
version = "0.1.0"
description = "TrafficGrid Control Plane Backend"
authors = ["Alex Ban <alex@scaleupsolutions.ro>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110.0"
uvicorn = "^0.27.1"
gunicorn = "^21.2.0"
sqlalchemy = "^2.0.0"
psycopg2-binary = "^2.9.9"
redis = "^5.0.1"
celery = "^5.3.6"
pydantic = "^2.6.1"
pydantic-settings = "^2.2.1"
pgvector = "^0.2.5"
playwright = "^1.42.0"
playwright-stealth = "^1.0.6"
sqlmodel = "0.0.16"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
