[tool.poetry]
name = "traffic-grid-gateway"
version = "0.1.0"
description = "TrafficGrid SOCKS5 Gateway"
authors = ["Alex Ban <alex@scaleupsolutions.ro>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.31.0"
python-socks = "^2.4.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"